--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -22,6 +22,10 @@
   margin: 0;
   overflow: hidden;
 }
+.route-info h3 {
+    white-space: nowrap;
+    overflow: hidden;
+}
 
 footer {
   /* position: fixed; */
